nav: Fix spacing

--- a/packages/nav/nav.css
+++ b/packages/nav/nav.css
@@ -22,6 +22,7 @@ nav .logo {
 nav .logo .header--version {
   font-weight: bold;
   font-size: 1rem;
+  margin-left: .5rem;
 }
 #our-nav .logo .header--super,
 nav .logo .header--super {
